syntax = "proto3";
package model;
option go_package="pkg/model";


message Character {
    string key = 1;
    string name = 2;
    string element = 3;
    int64 level = 4;
    int64 max_level = 5;
    int64 cons = 6;
    Weapon weapon = 7;
    CharacterTalents talents = 8;
    map<string, int64> sets = 9;
    map<string, double> stats = 10;
    map<string, double> snapshot = 11;
}

message CharacterTalents {
    int64 attack = 1;
    int64 skill = 2;
    int64 burst = 3;
}

message Weapon {
    string name = 1;
    int64 refine = 2;
    int64 level = 3;
    int64 max_level = 4;
}

message Enemy {
    int64 level = 1;
    double HP = 2 [json_name="hp"];
    map<string, double> resist = 3;
    Coord pos = 4;
    double particle_drop_threshold = 5;
    double particle_drop_count = 6;
    string particle_element = 7;
}

message Coord {
    double x = 1;
    double y = 2;
    double r = 3;
}

message SimulatorSettings {
    double duration = 1;
    bool damage_mode = 2;
    bool enable_hitlag = 3;
    bool def_halt = 4;
    int64 number_of_workers = 5;
    int64 number_of_iterations = 6;
    Delays delays = 7;

}

message Delays {
    int64 swap = 1;
}


message EnergySettings {
    bool active = 1;
    bool once = 2;
    int64 start = 3;
    int64 end = 4;
    int64 amount = 5;
    int64 last_energy_drop = 6;
}

message AvatarData {
    int64 rarity = 1;
    BodyType body = 2;
    ZoneType region = 3;
    Element element = 4;
    WeaponClass weapon_class = 5;
    string image_name = 6;
    AvatarStatsData base_stats = 7;
}

message AvatarStatsData {
    double base_hp = 1;
    double base_atk = 2;
    double base_def = 3;
    AvatarCurveType hp_curve = 4;
    AvatarCurveType atk_curve = 5;
    AvatarCurveType def_cruve = 6;
    StatType specialized = 7;
    repeated PromotionData promo_data = 8;
}

message PromotionData {
    int64 max_level = 1;
    double hp = 2;
    double atk = 3;
    double def = 4;
    double special = 5;
}

enum AvatarCurveType {
	GROW_CURVE_HP_S4 = 0;
	GROW_CURVE_ATTACK_S4 = 1;
	GROW_CURVE_HP_S5 = 2;
	GROW_CURVE_ATTACK_S5 = 3;
}

enum WeaponCurveType {
	GROW_CURVE_ATTACK_101 = 0;
	GROW_CURVE_ATTACK_102 = 1;
	GROW_CURVE_ATTACK_103 = 2;
	GROW_CURVE_ATTACK_104 = 3;
	GROW_CURVE_ATTACK_105 = 4;
	GROW_CURVE_CRITICAL_101 = 5;
	GROW_CURVE_ATTACK_201 = 6;
	GROW_CURVE_ATTACK_202 = 7;
	GROW_CURVE_ATTACK_203 = 8;
	GROW_CURVE_ATTACK_204 = 9;
	GROW_CURVE_ATTACK_205 = 10;
	GROW_CURVE_CRITICAL_201 = 11;
	GROW_CURVE_ATTACK_301 = 12;
	GROW_CURVE_ATTACK_302 = 13;
	GROW_CURVE_ATTACK_303 = 14;
	GROW_CURVE_ATTACK_304 = 15;
	GROW_CURVE_ATTACK_305 = 16;
	GROW_CURVE_CRITICAL_301 = 17;
}

enum WeaponClass {
    WEAPON_SWORD_ONE_HAND = 0;
    WEAPON_CLAYMORE = 1;
    WEAPON_POLE = 2;
    WEAPON_BOW = 3;
    WEAPON_CATALYST = 4;
}

enum BodyType {
    BODY_UNKNOWN = 0;
    BODY_BOY = 1;
    BODY_GIRL = 2;
    BODY_MALE = 3;
    BODY_LADY = 4;
    BODY_LOLI = 5;
}

enum ZoneType {
    ASSOC_TYPE_UNKNOWN = 0;
    ASSOC_TYPE_MONDSTADT = 1;
    ASSOC_TYPE_LIYUE = 2;
    ASSOC_TYPE_INAZUMA = 3;
    ASSOC_TYPE_SUMERU = 4;
    ASSOC_TYPE_FATUI = 5;
}

enum Element {
    Electric = 0;
    Fire = 1;
    Ice = 2;
    Water = 3;
    Grass = 4;
    ELEMENT_QUICKEN = 5; 
    ELEMENT_FROZEN = 6;
    Wind = 7;
    Rock = 8;
    ELEMENT_NONE = 9;
    ELEMENT_PHYSICAL = 10;
    ELEMENT_UNKNOWN = 11;
}

enum StatType {
	UNSPECIFIED = 0;
	FIGHT_PROP_DEFENSE_PERCENT = 1;
	FIGHT_PROP_DEFENSE = 2;
	FIGHT_PROP_HP = 3;
	FIGHT_PROP_HP_PERCENT = 4;
	FIGHT_PROP_ATTACK = 5;
	FIGHT_PROP_ATTACK_PERCENT = 6;
	FIGHT_PROP_CHARGE_EFFICIENCY = 7;
	FIGHT_PROP_ELEMENT_MASTERY = 8;
	FIGHT_PROP_CRITICAL = 9;
	FIGHT_PROP_CRITICAL_HURT = 10;
	FIGHT_PROP_HEAL = 11;
	FIGHT_PROP_FIRE_ADD_HURT = 12;
	FIGHT_PROP_WATER_ADD_HURT = 13;
	FIGHT_PROP_GRASS_ADD_HURT = 14;
	FIGHT_PROP_ELEC_ADD_HURT = 15;
	FIGHT_PROP_WIND_ADD_HURT = 16;
	FIGHT_PROP_ICE_ADD_HURT = 17;
	FIGHT_PROP_ROCK_ADD_HURT = 18;
	FIGHT_PROP_PHYSICAL_ADD_HURT = 19;
	FIGHT_PROP_SHIELD_COST_MINUS_RATIO_ADD_HURT = 20;
	FIGHT_PROP_HEALED_ADD = 21; //healing bonus
    FIGHT_PROP_BASE_HP = 22; // base hp
    FIGHT_PROP_BASE_ATTACK = 23; // base attack
    FIGHT_PROP_BASE_DEFENSE = 24; // base defense
    FIGHT_PROP_MAX_HP = 25; // max hp; not really used?
}